# Snake-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Google_tests/: CMakeLists.txt  Fruit.cpp  MoveSnake.cpp  NewSnake.cpp  Snake.cpp
SnakeGame_lib/: CMakeLists.txt
SnakeGame_lib/include/: Color.h  Fruit.h  Game.h  Menu.h  Point.h  Snake.h  definitions.h  uiDraw.h  uiInteract.h
SnakeGame_lib/src/: Fruit.cpp  Game.cpp  Menu.cpp  Point.cpp  Snake.cpp  uiDraw.cpp  uiInteract.cpp
